UpdatedLibrary/Logs/err_s1
test_andapp (__main__.AndroidTests) ... ERROR

======================================================================
ERROR: test_andapp (__main__.AndroidTests)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "C:\Program Files\Python35\lib\urllib\request.py", line 1240, in do_open
    h.request(req.get_method(), req.selector, req.data, headers)
  File "C:\Program Files\Python35\lib\http\client.py", line 1083, in request
    self._send_request(method, url, body, headers)
  File "C:\Program Files\Python35\lib\http\client.py", line 1128, in _send_request
    self.endheaders(body)
  File "C:\Program Files\Python35\lib\http\client.py", line 1079, in endheaders
    self._send_output(message_body)
  File "C:\Program Files\Python35\lib\http\client.py", line 911, in _send_output
    self.send(msg)
  File "C:\Program Files\Python35\lib\http\client.py", line 854, in send
    self.connect()
  File "C:\Program Files\Python35\lib\http\client.py", line 826, in connect
    (self.host,self.port), self.timeout, self.source_address)
  File "C:\Program Files\Python35\lib\socket.py", line 711, in create_connection
    raise err
  File "C:\Program Files\Python35\lib\socket.py", line 702, in create_connection
    sock.connect(sa)
ConnectionRefusedError: [WinError 10061] No connection could be made because the target machine actively refused it

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "Homeautomation_Appium.py", line 39, in setUp
    self.device1 = webdriver.Remote('http://localhost:4723/wd/hub', desired_caps1)
  File "C:\Program Files\Python35\lib\site-packages\selenium\webdriver\remote\webdriver.py", line 91, in __init__
    self.start_session(desired_capabilities, browser_profile)
  File "C:\Program Files\Python35\lib\site-packages\selenium\webdriver\remote\webdriver.py", line 173, in start_session
    'desiredCapabilities': desired_capabilities,
  File "C:\Program Files\Python35\lib\site-packages\selenium\webdriver\remote\webdriver.py", line 231, in execute
    response = self.command_executor.execute(driver_command, params)
  File "C:\Program Files\Python35\lib\site-packages\selenium\webdriver\remote\remote_connection.py", line 395, in execute
    return self._request(command_info[0], url, body=data)
  File "C:\Program Files\Python35\lib\site-packages\selenium\webdriver\remote\remote_connection.py", line 463, in _request
    resp = opener.open(request, timeout=self._timeout)
  File "C:\Program Files\Python35\lib\urllib\request.py", line 465, in open
    response = self._open(req, data)
  File "C:\Program Files\Python35\lib\urllib\request.py", line 483, in _open
    '_open', req)
  File "C:\Program Files\Python35\lib\urllib\request.py", line 443, in _call_chain
    result = func(*args)
  File "C:\Program Files\Python35\lib\urllib\request.py", line 1268, in http_open
    return self.do_open(http.client.HTTPConnection, req)
  File "C:\Program Files\Python35\lib\urllib\request.py", line 1242, in do_open
    raise URLError(err)
urllib.error.URLError: <urlopen error [WinError 10061] No connection could be made because the target machine actively refused it>

----------------------------------------------------------------------
Ran 1 test in 1.048s

FAILED (errors=1)
E
======================================================================
ERROR: testscript (__main__.cpaas_pyTest)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "Homeautomation_AWS_API.py", line 50, in testscript
    ss = subprocess.Popen(abc, stdin=subprocess.PIPE, stdout=subprocess.PIPE, stderr=subprocess.PIPE)
  File "C:\Program Files\Python35\lib\subprocess.py", line 950, in __init__
    restore_signals, start_new_session)
  File "C:\Program Files\Python35\lib\subprocess.py", line 1220, in _execute_child
    startupinfo)
FileNotFoundError: [WinError 2] The system cannot find the file specified

----------------------------------------------------------------------
Ran 1 test in 3.760s

FAILED (errors=1)
  File "jiraisuuecreator.py", line 1
    int i = 1
        ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "Pota_orches.py", line 33, in <module>
    main()
  File "Pota_orches.py", line 24, in main
    client.connect("52.10.165.197", 8181)
  File "C:\Program Files\Python35\lib\site-packages\paho\mqtt\client.py", line 686, in connect
    return self.reconnect()
  File "C:\Program Files\Python35\lib\site-packages\paho\mqtt\client.py", line 808, in reconnect
    sock = socket.create_connection((self._host, self._port), source_address=(self._bind_address, 0))
  File "C:\Program Files\Python35\lib\socket.py", line 711, in create_connection
    raise err
  File "C:\Program Files\Python35\lib\socket.py", line 702, in create_connection
    sock.connect(sa)
TimeoutError: [WinError 10060] A connection attempt failed because the connected party did not properly respond after a period of time, or established connection failed because connected host has failed to respond
